--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "home":"http://github.com/MunnawarAdeeb/Sports.git",
+  "homepage":"http://munnawaradeeb.github.io/Sports",
   "name": "project",
   "version": "0.1.0",
   "private": true,
