--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
-{
-  "homepage":"http://munnawaradeeb.github.io/Sports",
+{  "home":"http://munnawaradeeb.github.io/Sports.git",
   "name": "project",
   "version": "0.1.0",
   "private": true,
