--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{  "homepage":"http://munnawaradeeb.github.io/Sports",
+{    "home":"http://munnawaradeeb.github.io/Sports",
   "name": "project",
   "version": "0.1.0",
   "private": true,
@@ -13,8 +13,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
